...
      tableView.delegate = self
      tableView.register(AccountActivityCell.self, forCellReuseIdentifier: AccountActivityCell.identifier)
      return tableView
   }()
   let inviteFriendButton: UIButton = {
      let button = UIButton(type: .system)
      button.setTitle("Invite Friend", for: .normal)
      button.setTitleColor(.black, for: .normal)
      button.addTarget(self, action: #selector(inviteFriendButtonTapped), for: .touchUpInside)
      button.backgroundColor = .link
      button.layer.cornerRadius = 10
      return button
   }()
...
      //Formatting the activity kind to more readable format.
      if tableNumber.action_kind! == "TRANSFER" && tableNumber.receiver_id! == accountName {
         cell.actionKindLabel.text = "Activity: Recieved Near"
      } else if tableNumber.action_kind! == "TRANSFER" && tableNumber.signer_id! == accountName {
         cell.actionKindLabel.text = "Activity: Sent Near"
      } else if tableNumber.action_kind! == "FUNCTION_CALL" {
         cell.actionKindLabel.text = "Activity: Method called"
      } else if tableNumber.action_kind! == "ADD_KEY" {
         cell.actionKindLabel.text = "Activity: Access key added"
      } else if tableNumber.action_kind! == "CREATE_ACCOUNT" {
         cell.actionKindLabel.text = "Activity: New account created"
      }
      return cell
...
