...
   let accountName = UserDefaults.standard.value(forKey: Constants.nearAccountName.rawValue)
   
   //All the elements used in settings page are configured using anonymous closure pattern
   let amountContainer = UIView()
   let amountTextField: UITextField = {
      let tf = UITextField()
      tf.StyleTextField(placeholder: "Enter Amount", isSecureText: false)
      return tf
   }()
   let amountLogo: UIImage! = {
      let button = UIImage(systemName: "paperplane.fill")?.withTintColor(.link, renderingMode: .alwaysOriginal)
      return button
   }()
   let generateLinkDropButton: LoadingButton = {
      let button = LoadingButton(type: .system)
      button.setTitle("Generate", for: .normal)
      button.setTitleColor(.black, for: .normal)
      button.addTarget(self, action: #selector(generateLinkDropButtonTapped), for: .touchUpInside)
      button.titleLabel?.font = UIFont.systemFont(ofSize: 18)
      button.backgroundColor = .link
      button.layer.cornerRadius = 10
      return button
...
